--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,10 @@
         <version>7.7.1</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.33</version>
+    </dependency>
 
 </dependencies>
